add less organize files

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <!-- Main Navigation -->
     <nav>
       <div class="container align-center">
-        <a href="#">
-          <img class="logo" src="./img/logo.png" alt="Logo">
-        </a>
-
+        <img class="logo" src="./img/logo.png" alt="Logo">
         <div class="main-nav">
           <ul>
             <li>
@@ -42,7 +39,7 @@
     <section class="header-content">
       <h1>Burger & Coffee</h1>
       <p class="slogan">Best Burger and Coffee in Town!</p>
-      <a class="btn btn-full" href="#">Reserve a table</a>
+      <button class="btn btn--full btn--animated" href="#">Reserve a table</button>
     </section>
   </header>
   <!-- Main Content-->
