--- a/index.html
+++ b/index.html
@@ -11,44 +11,92 @@
 </head>
 
 <body>
+  <!-- Main Navigation -->
+  <div class="navigation">
+
+    <div class="navigation-box">
+
+      <img class="logo" src="./img/logo.png" alt="Logo">
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Home</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">About Us</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Menu</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Reservation</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+  </div>
+
   <!-- Website Header -->
-  <header>
-    <!-- Main Navigation -->
-    <nav>
-      <div class="container align-center">
-        <img class="logo" src="./img/logo.png" alt="Logo">
-        <div class="main-nav">
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">About Us</a>
-            </li>
-            <li>
-              <a href="#">Menu</a>
-            </li>
-            <li>
-              <a href="#">Reservation</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Header Content -->
-    <section class="header-content">
-      <h1>Burger & Coffee</h1>
-      <p class="slogan">Best Burger and Coffee in Town!</p>
-      <button class="btn btn--full btn--animated" href="#">Reserve a table</button>
-    </section>
+  <header class="header">
+    <h1 class="heading-primary">
+      <span class="heading-primary--main">Burger & Coffee</span>
+      <span class="heading-primary--sub">Best Burger and Coffee in Town!</span>
+    </h1>
+    <button class="btn btn--full btn--animated" href="#">Reserve a table</button>
   </header>
+
   <!-- Main Content-->
   <main>
-    Main Content
+    <section class="section-about">
+      <div class="center-text margin-bottom-big">
+        <h2 class="heading-secondary">
+          About Us
+        </h2>
+      </div>
+    </section>
+    <section class="section-gallery">
+      <div class="center-text margin-bottom-big">
+        <h2 class="heading-secondary">
+          Gallery
+        </h2>
+      </div>
+    </section>
+    <section class="section-testimonials">
+      <div class="center-text margin-bottom-big">
+        <h2 class="heading-secondary">
+          Testimonials
+        </h2>
+      </div>
+    </section>
+    <section class="section-reservation">
+      <div class="center-text margin-bottom-big">
+        <h2 class="heading-secondary">
+          Reservation
+        </h2>
+      </div>
+    </section>
+    <section class="section-map">
+      <div class="center-text margin-bottom-big">
+        <h2 class="heading-secondary">
+          Map
+        </h2>
+      </div>
+    </section>
   </main>
   <!-- Website Footer -->
-  <footer>
-    Footer
+  <footer class="footer">
+    <div class="footer__box">
+      <div class="columns">
+        <div class="column">navigation</div>
+        <div class="column">Social media icons</div>
+      </div>
+      <div>
+        Some Text
+      </div>
+    </div>
+
   </footer>
   <script src="./js/main.js"></script>
 </body>
