--- a/index.html
+++ b/index.html
@@ -57,10 +57,33 @@
       </div>
     </section>
     <section class="section-gallery">
-      <div class="center-text margin-bottom-big">
-        <h2 class="heading-secondary">
-          Gallery
-        </h2>
+      <div class="gallery-showcase">
+        <figure class="gallery-photo">
+          <img src="./img/food-01.jpg" alt="food1">
+        </figure>
+        <figure class="gallery-photo">
+          <img src="./img/food-02.jpg" alt="food2">
+        </figure>
+        <figure class="gallery-photo">
+          <img src="./img/food-03.jpg" alt="food3">
+        </figure>
+        <figure class="gallery-photo">
+          <img src="./img/food-04.jpg" alt="food4">
+        </figure>
+      </div>
+      <div class="gallery-showcase">
+        <figure class="gallery-photo">
+          <img src="./img/food-05.jpg" alt="food5">
+        </figure>
+        <figure class="gallery-photo">
+          <img src="./img/food-06.jpg" alt="food6">
+        </figure>
+        <figure class="gallery-photo">
+          <img src="./img/food-07.jpg" alt="food7">
+        </figure>
+        <figure class="gallery-photo">
+          <img src="./img/food-08.jpg" alt="food8">
+        </figure>
       </div>
     </section>
     <section class="section-testimonials">
@@ -88,15 +111,17 @@
   <!-- Website Footer -->
   <footer class="footer">
     <div class="footer__box">
-      <div class="columns">
-        <div class="column">navigation</div>
-        <div class="column">Social media icons</div>
-      </div>
-      <div>
-        Some Text
-      </div>
+      <ul class="footer-nav">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+      <p class="paragraph">
+        Copyright © 2018 by Achtdesigner. All rights reserved.
+      </p>
     </div>
-
   </footer>
   <script src="./js/main.js"></script>
 </body>
